# traffic-control

./: .gitignore  README.md  auto_init_db.py  main.py  pyproject.toml  requirements.txt  run.sh
api/: server.py
config/: logging_config.py  settings.py
controllers/: orchestrator.py
database/: db.py  metadata_model.py
examples/: __init__.py
models/: __init__.py  response_models.py  validator.py
models/schemas/: __init__.py  data_schema.py  download_schema.py  optimization_schema.py  raw_data_schema.py
services/: data_formatter.py  data_processor.py  database_service.py  process_service.py  storage_proxy.py  sync_proxy.py
utils/: error_handler.py  time.py
